2007-02-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl(h,cpp): added video tag loaders
	* gameswf/gameswf_action.cpp: added netstream constructor
	* gameswf/gameswf_render(h, cpp): added video interface
	* gameswf/gameswf_test_ogl.cpp: SDL_Init() should be executed
	up to create_render_handler()
	* gameswf/gameswf.h: added video interface
	* gameswf/gameswf_render_handler_ogl.cpp: added video interface
	* gameswf/gameswf_video_base(h,cpp), gameswf/gameswf_video_impl(h,cpp),
	gameswf/gameswf_video_ogl(h,cpp), gameswf/gameswf_netstream(h,cpp):
	added video stuff
	* base/ogl(h,cpp): added video stuf
	
2007-02-08  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: added the support of multi-file games
	* gameswf/gameswf_sound_handler.h: typo
	* gameswf/gameswf_impl.cpp: fixed the bug being
	the reason of an infinite cycle
	
2007-02-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: display of the gameswf_logo and process of loading
	of a swf-file is added
	* gameswf/gameswf_sound_handler.(cpp, h): has returned the lost comments
	
2007-02-06  Vitaly Alexeev <tishka92@yahoo.com>

	* base/container.h: added operator[] into class hash
	* gameswf/gameswf.h: added typedef used for audio of video
	* gameswf/gameswf_sound_handler_sdl.h: added new h-file for
	gameswf_sound_handler_sdl.cpp
	* gameswf/gameswf_sound_handler_sdl.cpp: totally rewritten.
	Uses FFMPEG for MP3 audio. Can process audio of video stream.
	* gameswf/gameswf_test_ogl.cpp: a bit cleanup
	* gameswf/win32/VC8/gameswf.vcproj: added gameswf_sound_handler.h
	

2007-02-06  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_types.h: The new version of SDL has own
	typedefs(Sint8, Uint8, ..)
	* gameswf/win32/VC8/gameswf.vcproj: added VC8 project file


2005-06-06  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_test_ogl.cpp (runThread): New SDL_Thread to
	handle looking for network data, and if there is data, push an SDL